# forgetmenot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: forget_me_not.yml
examples/: sk.rs
src/: lib.rs
src/adapters/cli/clap/: cli_options.rs  mod.rs
src/application/: error.rs  mod.rs  test.rs  test_result.rs
src/domain/: command.rs  command_executor.rs  mod.rs  test.rs  test_history.rs  test_provider.rs  test_result.rs
src/domain/checklist/: checklist_service.rs  error.rs  mod.rs
src/domain/test_runner/: error.rs  mod.rs
src/domain/vcs_repository/: error.rs  mod.rs  vcs_repository_provider.rs  version.rs
src/ports/: mod.rs
src/ports/cli/clap/: mod.rs  (+1 more)
src/ports/command_execution/: mod.rs
src/ports/config/: mod.rs
src/ports/version_control/: mod.rs
test_files/: config_with_duplicate_test_names.yml
tests/cli/: hello.rs  main.rs  version.rs
tests/cli/checklist/: mod.rs  records_which_tests_have_been_run.rs
tests/cli/describe_test/: describes_configured_test.rs  describes_test.rs  describes_test_without_description.rs  mod.rs
tests/cli/helpers/: builder.rs  cmd_builder.rs  formatting.rs  git.rs  mod.rs  test_directory.rs
tests/cli/list_tests/: fails_if_cannot_find_config.rs  lists_test.rs  lists_test_without_description.rs  mod.rs
tests/cli/run_command/: fails_if_cannot_find_config.rs  fails_if_duplicate_test_names_in_config.rs  fails_if_test_does_not_exist.rs  fails_if_test_is_a_failure.rs  mod.rs  runs_command_defined_in_config.rs
tests/cli/run_test/: fails_if_cannot_find_config.rs  fails_if_duplicate_test_names_in_config.rs  fails_if_test_does_not_exist.rs  fails_if_test_is_a_failure.rs  mod.rs  runs_command_defined_in_config.rs  runs_test.rs  runs_test_with_system_environment_variables.rs  runs_with_config_directory_as_current_directory.rs
(+58 files in other folders)
