[package]
name = "forgetmenot"
version = "0.1.0"
authors = ["Josh Jones <ohblonddev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
clap_complete = "3.1"
derive-getters = "0.2"
derive-new = "0.5"
fsio = "0.3"
itertools = "0.10"
owo-colors = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
skim = "0.9"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "1.0"
assert_fs = "1.0"
predicates = "1.0"
